# MOReDWR

./: .gitignore  .project  README.md
Elastodynamics/: cG(r)_elastodynamics_formulation.ipynb  dG(r)_elastodynamics_formulation.ipynb
Elastodynamics/Dual Elastodynamics/FOM/: main.cc
Elastodynamics/Dual_Elastodynamics/FOM/: main.cc
Elastodynamics/Error/: main.cc  plot_error_estimator.py  plot_goal_funcs.py
Elastodynamics/FOM/: CMakeLists.txt  discretization_loop_3d.sh  main.cc
Elastodynamics/ROM/: auxiliaries.py  check_matricies.py  convergence_analysis.py  discretization_analysis_3d.py  iPOD.py  iROM_beam.py  iROM_inspired_by_Grid_DWR.py  iROM_inspired_by_Grid_DWR_old.py  test_error_estimator.py  test_large_LES.py  test_reduced_error_estimator.py
FOM/all_at_once/: CMakeLists.txt  main.cc
FOM/slabwise/: main.cc
Heat/Data/: readme.md
Heat/FOM/1D/slabwise/: Calculate derivatives of analytic solution to Hartmann problem.ipynb  discretization_loop.sh  main.cc
Heat/FOM/2D/slabwise/: discretization_loop_2d.sh  main.cc
Heat/FOM/all_at_once/: CMakeLists.txt  main.cc
Heat/FOM/slabwise/: main.cc
Heat/ROM/1D/all_at_once/: load_linear_system.py  main.py  pod_rom_error.py
Heat/ROM/1D/slabwise/: discretization_analysis.py  iPOD_1D.py  iROM_heat_1D_DWR_grid.py  influence_primal_energy_1d.py  performance_eval_iROM.py  pod_rom_error.py
Heat/ROM/2D/slabwise/: analyze.py  condor.submit  discretization_analysis_2d.py  iPOD.py  iROM_heat_DWR_grid.py  iROM_heat_DWR_on_one_slab.py  iROM_long_term_pollution.py  influence_primal_energy.py  pod_rom_error.py  pod_rom_error_NL.py
ROM/all_at_once/: load_linear_system.py  pod_rom_error.py
ROM/slabwise/: pod_rom_error.py
Wave/FOM/: main.cc  plot_solution.py
Wave/ROM/2D/slabwise/: iPOD.py  iPOD_naive.py  pod_rom_error.py  pod_rom_error_symp.py
(+4138 files in other folders)
